--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,3 +1,4 @@
+/* main setup for styling and color variables*/
 * {
   margin: 0;
   padding: 0;
@@ -8,6 +9,7 @@
   --flight-color: rgb(100, 225, 100);
 }
 
+/* sets up main container to be flex*/
 .rocket-display {
   display: flex;
   justify-content: space-around;
@@ -18,6 +20,7 @@
   font-family: Verdana, Geneva, Tahoma, sans-serif;
 }
 
+/* sets up cards to be flex to apporpiately size img*/
 .rocket-card {
   height: 350px;
   width: 200px;
@@ -49,10 +52,12 @@
   font-size: 18px;
 }
 
+/* sets element to be on same line as span*/
 .wrapper p {
   display: inline;
 }
 
+/* the four styles below are for launch status*/
 .good-color {
   color: var(--good-color);
 }
