--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -26,13 +26,14 @@ header {
 }
 
 header img {
-    flex:0;
+    flex: 0;
     width: 230px;
 }
 
 .bdr-btm {
     border-bottom: var(--brown) 2px solid;
-    width: 55%;
+    width: 47%;
+    margin: 0 auto 175px auto;
 }
 
 .cntr-content {
@@ -53,7 +54,12 @@ header img {
     text-align: center;
 }
 
-.bdr-btm-gold{
+.city-search {
+    margin: 0 auto 30px auto;
+    border-radius: 5px;
+}
+
+.bdr-btm-gold {
     border-bottom: var(--gold) 2px solid;
     width: 55%;
 }
@@ -75,17 +81,84 @@ footer a {
     text-align: center;
 }
 
-@media screen and (min-width: 900px) { 
-    header {
-        background-image: url("Liftoff.png");
-        width: 100%;
-        padding: 0;
-    }
-    
+@media screen and (min-width: 900px) {
+
+    /* for desktop display */
     body {
         font-family: "Roboto Light", "sans-serif";
         font-size: 32px;
+        color: var(--gold);
     }
-    
-}
 
+    header {
+        background-image: url("Liftoff.jpg");
+        background-position: 45% 40%;
+        background-size: 220%;
+        display: block;
+        margin: 0;
+        padding: 0 0 150px;
+        border-bottom: var(--brown) 40px solid;
+    }
+
+    .alt-size {
+        display: block;
+        padding: auto;
+        margin: 0 auto 150px auto;
+        width: 170px;
+        height: 170px;
+    }
+
+    header p {
+        margin: 0 300px 0 300px;
+    }
+
+    .bdr-btm {
+        border-bottom: var(--white) 3.5px solid;
+    }
+
+    .translucent-bg {
+        background-color: rgba(75, 55, 43, .5);
+    }
+
+    .city-search {
+        width: 15%;
+        font-size: 20px;
+        color: var(--brown);
+        margin: 0 auto 73px auto
+    }
+
+    .alt-content {
+        display: flex;
+        flex: wrap;
+        flex-wrap: wrap;
+        padding: 0;
+        justify-content: space-around;
+    }
+
+    .rocket-img {
+        width: 100%;
+        height: 600px
+    }
+
+    .alt-content iframe {
+        width: 600px;
+        height: 600px;
+        margin: 42px 0 0 0;
+    }
+
+    .bdr-btm-gold {
+        margin: 0 auto 0 auto;
+        text-align: center;
+        border-bottom: solid 3px;
+    }
+
+    footer {
+        color: var(--brown);
+        font-size: 22px;
+    }
+
+    footer h2 {
+        font-size: 36px;
+        font-family: "Roboto Medium", "sans-serif";
+    }
+}
