--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,11 +8,16 @@
   --gold: #d7b668;
   --sky-blue: #9ec8ca;
   --white: #ffffff;
+  --good-color: rgb(225, 225, 100);
+  --bad-color: rgb(225, 100, 100);
+  --no-color: rgb(150, 150, 150);
+  --flight-color: rgb(100, 225, 100);
 }
 
 * {
   padding: 0;
   margin: 0;
+  box-sizing: border-box;
 }
 
 body {
@@ -91,17 +96,6 @@ h2 {
   padding-bottom: 20px;
 }
 
-/* main setup for styling and color variables*/
-* {
-  margin: 0;
-  padding: 0;
-  box-sizing: border-box;
-  --good-color: rgb(225, 225, 100);
-  --bad-color: rgb(225, 100, 100);
-  --no-color: rgb(150, 150, 150);
-  --flight-color: rgb(100, 225, 100);
-}
-
 /* sets up main container to be flex*/
 .rocket-display {
   display: flex;
@@ -110,12 +104,19 @@ h2 {
   width: 100%;
 }
 
+.rocket-display h2 {
+  flex: 1 100%;
+  font-size: 30px;
+  color: var(--gold);
+}
+
 /* sets up cards to be flex to apporpiately size img*/
 .rocket-card {
-  height: 350px;
+  height: 300px;
   width: 200px;
   background-image: linear-gradient(rgb(0, 0, 0), rgb(50, 50, 175));
-  margin: 15px;
+  margin: 10px;
+  padding: 5px;
   display: flex;
   justify-content: space-around;
   align-items: center;
@@ -181,12 +182,7 @@ h2 {
 }
 
 #map {
-  position: relative;
-  margin-top: 200px;
-  margin-left: 30px;
-  justify-content: center;
-  width: 100%;
-  height: 100%;
+  display: block;
 }
 
 .search-history-label {
@@ -227,15 +223,16 @@ h2 {
 .main-container {
   margin-left: 0;
   margin-right: 0;
-  border: 3px solid white;
-  width: 45vw;
-  height: 90vh;
+  height: 175vh;
   border-radius: 10px;
 }
 
 .field {
-  margin-left: 30px;
-  margin-right: 30px;
+  text-align: center;
+  border: 3px solid var(--gold);
+  border-radius: 15px;
+  padding: 30px;
+  margin: 10px;
 }
 
 /* .search-history-container {
@@ -278,7 +275,7 @@ h2 {
 .search-wrap {
   display: flex;
   flex-direction: row;
-  justify-content: flex-end;
+  justify-content: space-evenly;
 }
 
 /* .search-wrap-right {
@@ -349,14 +346,6 @@ footer a {
     flex-wrap: wrap;
     padding: 0;
     justify-content: space-around;
-  }
-
-  .alt-content {
-    display: flex;
-    flex: wrap;
-    flex-wrap: wrap;
-    padding: 0;
-    justify-content: space-around;
     width: 600px;
     height: 600px;
     margin: 42px 0 0 0;
@@ -403,5 +392,12 @@ footer a {
     background-image: linear-gradient(to top, rgb(100, 100, 220), rgb(0, 0, 0));
     color: white;
     transition: background-image 2s;
+  }
+}
+
+@media screen and (max-width: 1500) {
+  .rocket-display {
+    overflow-y: auto;
+    overflow-x: auto;
   }
 }
