--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -338,7 +338,7 @@ footer a:hover {
   }
 
   header {
-    background-image: url("./liftoff.jpg");
+    background-image: url(".\liftoff.jpg");
     background-position: 45% 40%;
     background-size: 220%;
     display: block;
